--- a/css/style.css
+++ b/css/style.css
@@ -1,26 +1,38 @@
-*{
+@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-header{
+header {
     display: flex;
     align-items: center;
-    padding: 30px;
+    padding: 15px;
+    font-family: "Open Sans", sans-serif;
+    box-shadow: 1px 2px 5px rgba(0, 0, 0, 0.3);
+    margin-bottom: 20px;
 }
 
-#logo{
+#logo {
     width: 40px;
 }
 
-#name{
+#name {
     margin-left: 15px;
     font-size: 25px;
+    font-weight: 800;
     font-style: italic;
+    color: #666666;
 }
 
-#principal{
+span {
+    color: rgb(0, 156, 136);
+}
+
+#principal {
     display: block;
     margin: 0 auto;
     padding: 20px;
@@ -29,57 +41,62 @@ header{
     width: 350px;
     height: 470px;
     margin-bottom: 50px;
+    background: rgb(57, 57, 57);
+    box-shadow: 2px 4px 10px rgba(0, 0, 0, 0.3);
 }
 
-#visor{
-    margin: 10px 5px 10px 5px;
-    padding: 20px;
+#visor {
+    margin: 10px 5px 25px 5px;
+    padding: 18px;
     border: 1px solid #2a2a2a;
-    border-radius: 8px;
+    border-radius: 15px;
+    background: rgb(145, 164, 156);
+    display: flex;
+    justify-content: flex-end;
+    font-size: 25px;
+    font-family: "Orbitron", sans-serif;
+    font-weight: 500;
 }
 
-#teclado{
+#teclado {
     margin: 10px 0px;
 }
 
-#box-one{
+#box-one {
     display: flex;
     justify-content: space-around;
-    margin-bottom:10px;
+    margin-bottom: 20px;
+    align-items: center;
 }
 
-.box-btn{
+.box-btn {
     display: flex;
     justify-content: space-around;
     margin-bottom: 10px;
 }
 
-#box-one{
-        display: flex;
-        align-items: center;
-        margin-bottom: 20px ;
-}
-
-#on-ce{
+#on-ce {
     width: 50px;
     height: 50px;
     padding: 5px;
     border-radius: 50px;
-    background: rgb(0, 216, 140);
+    background: rgb(0, 156, 136);
     border: 0.5px solid rgb(0, 111, 68);
     cursor: pointer;
+    box-shadow: 2px 4px 10px rgba(0, 0, 0, 0.3);
 }
 
-.yellow-btn{
+.yellow-btn {
     width: 50px;
     height: 20px;
     border-radius: 30px;
     background: rgb(246, 255, 0);
     border: 0.5px solid rgb(95, 95, 18);
     cursor: pointer;
+    box-shadow: 2px 4px 10px rgba(0, 0, 0, 0.3);
 }
 
-.btn-comum{
+.btn-comum {
     width: 60px;
     height: 35px;
     border-radius: 9px;
@@ -88,4 +105,59 @@ header{
     cursor: pointer;
     color: #fff;
     background: #121212;
+    box-shadow: 2px 4px 10px rgba(0, 0, 0, 0.3);
+}
+
+.btn-comum:active, .yellow-btn:active, #on-ce:active{
+  transform: scale(0.90); /* efeito de "pressionado" */
+  box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+}
+
+#position-btn {
+    display: flex;
+    max-height: 45px;
+}
+
+.box-five {
+    max-height: 50px;
+}
+
+.position {
+    margin-left: 10px;
+}
+
+.um {
+    margin-left: 9px;
+}
+
+.dois {
+    margin-left: 16.5px;
+}
+
+.tres {
+    margin-left: 17.5px;
+}
+
+.zero {
+    margin-left: 7.5px;
+}
+
+.ponto {
+    margin-left: 10px;
+}
+
+.igual {
+    margin-left: 10px;
+}
+
+.adicao {
+    height: 80px;
+    background: rgb(0, 156, 136);
+    border: 0.5px solid rgb(0, 111, 68);
+    margin-left: 17px;
+    box-shadow: 2px 4px 10px rgba(0, 0, 0, 0.3);
+}
+
+.box-six {
+    max-width: 225px;
 }
